[workspace]
members = [
    "houtu",
    "houtu-renderer",
    "houtu-scene",
    "houtu-jobs",
    "bevy_web_asset",
]
resolver = "2"

[profile.release]
debug = true

# [patch.crates-io]
# geo = { git = "https://github.com/georust/geo", branch = "frewsxcv/triangulate" }
# proj = { git = "https://github.com/georust/proj", branch = "cfarwell-send" }
# proj-sys = { git = "https://github.com/georust/proj", branch = "cfarwell-send" }
