[package]
name = "houtu-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_asset",
    "bevy_pbr",
    "wayland",
    "png",
    "webgl2"
] }
houtu-scene = { path = "../houtu-scene" }
houtu-renderer = { path = "../houtu-renderer" }
