[package]
name = "houtu-jobs"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
async-channel = "1.8.0"
bevy = { version = "0.11", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
] }
instant = "0.1"
# wasm绑定
# console_error_panic_hook = "0.1"
# js-sys = "0.3"
# wasm-bindgen = "0.2"
# web-sys = { version = "0.3", features = [
#     "Blob",
#     "BlobPropertyBag",
#     "console",
#     "DedicatedWorkerGlobalScope",
#     "Document",
#     "HtmlElement",
#     "Location",
#     "MessageEvent",
#     "Node",
#     "Text",
#     "Url",
#     "Window",
#     "Worker",
# ] }
