[package]
name = "houtu-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "wayland",
    "bevy_pbr",
    "png",
] }
bevy_reflect_derive = "0.10.1"
bevy_easings = "0.10"
bevy_egui = "0.20.3"
houtu-scene = { path = "../houtu-scene" }
houtu-jobs = { path = "../houtu-jobs" }
bevy_web_asset = { path = "../bevy_web_asset" }
bevy_atmosphere = "0.6.0"
bevy-inspector-egui = "0.18.3"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", branch = "master", features = ["stream"] }
futures-util = "0.3"
thiserror = "1.0.40"
bytes = "1.4.0"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
async-channel = "1.8.0"
instant = "0.1"
rand="0.8.5"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
# debug
bevy_prototype_debug_lines = {version="0.10",features=["3d"]}

bevy-async-task={git="https://github.com/vectorgameexperts/bevy-async-task.git",branch="main"}