[package]
name = "houtu-scene"
version = "0.1.0"
edition = "2021"
authors = ["catnuko <catnuko6912@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_asset",
    "bevy_pbr",
    "wayland",
    "png",
] }
round = "0.1.2"
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.dev.package."*"]
opt-level = 3
