[package]
name = "houtu-scene"
version = "0.1.0"
edition = "2021"
authors = ["catnuko <catnuko6912@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false }
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }


[profile.dev.package."*"]
opt-level = 3
