[package]
name = "houtu"
version = "0.1.0"
authors = ["catnuko <catnuko6912@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_asset",
    "bevy_pbr",
    "wayland",
    "png",
] }
# houtu-scene = { path = "../houtu-scene" }
houtu-renderer = { path = "../houtu-renderer" }
wasm-bindgen = "0.2"

# [profile.dev.package."*"]
# opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

