[package]
name = "houtu"
version = "0.1.0"
authors = ["catnuko <catnuko6912@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "png",
] }
houtu-renderer = { path = "../houtu-renderer" }
image = "0.24.7"
wasm-bindgen = "0.2"

[profile.dev.package."*"]
opt-level = 3

# https://github.com/rust-lang/cargo/issues/4399
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
