[package]
name = "quantized-mesh-decoder"
version = "0.1.0"
edition = "2021"
authors = ["ZhenYu Qiu<catnuko6912@gmail.com>"]
license = "MIT"
description = "A library for decoding Cesium quantized-mesh-1.0 terrain"
homepage = "https://github.com/catnuko/houtu/tree/master/quantized-mesh-decoder"
repository = "https://github.com/catnuko/houtu"
documentation = "https://github.com/catnuko/houtu/blob/master/quantized-mesh-decoder/README.md"
keywords = ["Cesium", "quantized-mesh", "terrain", "decoder"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
