[package]
name = "lodtree"
description = "A simple crate to help create octrees and quadtrees for chunked level of detail"
version = "0.1.4"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dimev/lodtree"
documentation = "https://docs.rs/lodtree"
keywords = ["lod", "terrain", "octree", "quadtree", "tree"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev_dependencies]
rayon = "1.5"
glium = "0.30"
